# fl-thesis-skovde

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
fl_thesis_skovde/: __init__.py  client_app.py  server_app.py  strategies.py  task.py  task_cifar10.py  task_mnist.py  task_sentiment140.py  torchdatasetwrapper.py
wandb/run-20250409_214942-m11qyrse/: run-m11qyrse.wandb
wandb/run-20250409_214942-m11qyrse/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250410_072556-cksbw3cp/: run-cksbw3cp.wandb
wandb/run-20250410_073022-9z4g1ma0/: run-9z4g1ma0.wandb
wandb/run-20250410_073022-9z4g1ma0/files/: config.yaml  wandb-metadata.json
wandb/run-20250410_073328-4lwberzz/: run-4lwberzz.wandb
wandb/run-20250410_073328-4lwberzz/files/: wandb-metadata.json
wandb/run-20250410_073437-n6i8npnk/: run-n6i8npnk.wandb
wandb/run-20250410_073437-n6i8npnk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250410_073600-66cp0509/: run-66cp0509.wandb
wandb/run-20250410_073600-66cp0509/files/: wandb-metadata.json
wandb/run-20250410_074311-z1nnh2rx/: run-z1nnh2rx.wandb
wandb/run-20250410_074311-z1nnh2rx/files/: requirements.txt  wandb-metadata.json
wandb/run-20250410_074703-aobfsafl/: run-aobfsafl.wandb
wandb/run-20250410_074703-aobfsafl/files/: wandb-metadata.json  wandb-summary.json
